[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/modo_tairon/Main.gd" type="Script" id=2]
[ext_resource path="res://Scripts/modo_tairon/Crosshair.gd" type="Script" id=3]
[ext_resource path="res://Scenes/tairon/assets/basura.png" type="Texture" id=4]
[ext_resource path="res://materials/Button.tres" type="Theme" id=5]
[ext_resource path="res://Scenes/tairon/assets/piso fino.jpg" type="Texture" id=6]
[ext_resource path="res://Scenes/tairon/assets/anadir.png" type="Texture" id=7]
[ext_resource path="res://Scenes/tairon/assets/kindpng_4853972.png" type="Texture" id=8]
[ext_resource path="res://Scenes/tairon/assets/gira-a-la-derecha.png" type="Texture" id=9]
[ext_resource path="res://materials/CreateButton.tres" type="StyleBox" id=10]
[ext_resource path="res://materials/RotateButton.tres" type="StyleBox" id=11]
[ext_resource path="res://materials/DeleteButton.tres" type="StyleBox" id=12]
[ext_resource path="res://Scripts/SupabaseManager.gd" type="Script" id=13]
[ext_resource path="res://Scripts/SceneStateManager.gd" type="Script" id=14]
[ext_resource path="res://Entities/Camera/Camera.tscn" type="PackedScene" id=15]

[sub_resource type="PlaneMesh" id=2]

[sub_resource type="ORMSpatialMaterial" id=4]
albedo_color = Color( 0.537255, 0.517647, 0.517647, 1 )
albedo_texture = ExtResource( 6 )
uv1_triplanar = true
uv1_triplanar_sharpness = 1.0

[sub_resource type="BoxShape" id=1]

[sub_resource type="Theme" id=5]

[node name="Main" type="Spatial"]
script = ExtResource( 2 )
raycast_path = NodePath("Camera/RayCast")
camera_path = NodePath("Camera")

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.866025, 0.353553, -0.353553, 0, 0.707107, 0.707107, 0.5, -0.612372, 0.612372, 0, 0, -29.3469 )

[node name="Floor" type="StaticBody" parent="." groups=["floor"]]

[node name="MeshInstance" type="MeshInstance" parent="Floor"]
transform = Transform( 50, 0, 0, 0, 50, 0, 0, 0, 50, 0, 0, 0 )
mesh = SubResource( 2 )
skeleton = NodePath("../CollisionShape")
material/0 = SubResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Floor"]
transform = Transform( 50, 0, 0, 0, 0.5, 0, 0, 0, 50, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "+"
align = 1

[node name="DeleteButton" type="Button" parent="CanvasLayer"]
modulate = Color( 0.976471, 0.0196078, 0.0196078, 1 )
self_modulate = Color( 1, 0, 0, 1 )
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 37.0
margin_top = -170.0
margin_right = 649.0
margin_bottom = 442.0
rect_scale = Vector2( 0.215063, 0.21195 )
theme = ExtResource( 5 )
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
icon = ExtResource( 4 )
icon_align = 1

[node name="ScaleSlider" type="HSlider" parent="CanvasLayer"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 49.0
margin_top = 300.0
margin_right = 349.0
margin_bottom = 320.0
rect_rotation = -89.9698
rect_scale = Vector2( 2.51994, 5.26139 )
min_value = 0.5
max_value = 30.0
step = 0.001
value = 3.0
rounded = true

[node name="CreateButton" type="Button" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -197.0
margin_top = -32.0001
margin_right = 355.0
margin_bottom = 520.0
rect_scale = Vector2( 0.222456, -0.240001 )
theme = SubResource( 5 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/normal = ExtResource( 10 )
icon = ExtResource( 7 )

[node name="TextureButton" type="TextureButton" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -185.0
margin_top = 532.0
margin_right = 795.0
margin_bottom = 1512.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 8 )

[node name="right" type="TextureButton" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -17.0
margin_top = 601.0
margin_right = 963.0
margin_bottom = 1581.0
rect_rotation = 89.8018
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 8 )

[node name="left" type="TextureButton" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -256.0
margin_top = 696.0
margin_right = 724.0
margin_bottom = 1676.0
rect_rotation = -88.5008
rect_scale = Vector2( 0.0979077, 0.1 )
texture_normal = ExtResource( 8 )

[node name="down" type="TextureButton" parent="CanvasLayer"]
anchor_right = 0.086
margin_left = 2312.0
margin_top = 768.0
margin_right = 3373.0
margin_bottom = 1748.0
rect_rotation = -179.275
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 8 )

[node name="RotateButton" type="Button" parent="CanvasLayer"]
margin_left = 233.0
margin_top = 920.0
margin_right = 785.0
margin_bottom = 1472.0
rect_scale = Vector2( 0.228322, 0.208534 )
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
icon = ExtResource( 9 )

[node name="BlocksContainer" type="Spatial" parent="."]

[node name="SupabaseManager" type="Node" parent="."]
script = ExtResource( 13 )

[node name="SceneStateManager" type="Node" parent="."]
script = ExtResource( 14 )

[node name="Camera" parent="." instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.83206, 0 )

[connection signal="button_down" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="CanvasLayer/TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="button_down" from="CanvasLayer/right" to="." method="_on_right_button_down"]
[connection signal="button_up" from="CanvasLayer/right" to="." method="_on_right_button_up"]
[connection signal="button_down" from="CanvasLayer/left" to="." method="_on_left_button_down"]
[connection signal="button_up" from="CanvasLayer/left" to="." method="_on_left_button_up"]
[connection signal="button_down" from="CanvasLayer/down" to="." method="_on_down_button_down"]
[connection signal="button_up" from="CanvasLayer/down" to="." method="_on_down_button_up"]

[editable path="Camera"]
